# seabird-processing

./: .gitignore  CODEOWNERS  LICENSE  LICENSE.txt  README.md  Setup.iss  pyproject.toml  setup.py
.github/workflows/: pypi-publish.yml  test.yml
.run/: Test.run.xml
seabird-sbe/: SBE.py
seabirdSBE/: SBE.py  __init__.py  commands.py  configs.py  logger.py  pipeline.py  sbe_exec.py  settings.py
seabird_processing/: __init__.py  batch.py  commands.py  configs.py  pipeline.py  sbe_exec.py  settings.py
seabird_sbe/: __init__.py  commands.py  configs.py  logger.py  pipeline.py  sbe_exec.py
tests/: test_batch.py  test_configs.py  utils.py
tests/files/: SBE19plus_01907674_2020_02_05_0001.hex
tests/files/psa/: AlignCTD-7674-20181210.psa  BinAvg-7674-20140307.psa  CellTM-7674-20140307.psa  DatCnv-7674-20181210.psa  Derive-7674-20140307.psa  DeriveTEOS10-7674-20140307.psa  Filter.psa  LoopEdit-7674-20140307.psa
tests/files/xmlcon/: 19-7674-20200126.xmlcon
