[tool.poetry]
name = "seabird-sbe"
version = "0.0.0"
description = "Python interface for calling Seabird CTD processing commands"
authors = [
    "Taylor Denouden <taylor.denouden@hakai.org>",
    "Jessy Barrett <jessy.barrett@hakai.org"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ruff = "^0.0.280"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
